z-index placeholder for bootstrap active class fix

--- a/app/assets/stylesheets/effective_ckeditor/plugins/effective_menus.scss
+++ b/app/assets/stylesheets/effective_ckeditor/plugins/effective_menus.scss
@@ -44,6 +44,7 @@
       border-top: 5px solid red;
       border-bottom: none;
       border-right: 5px solid transparent;
+      z-index: 5;
     }
   }
 
